@@ -971,7 +971,12 @@ Diskussions-Seite nicht, da schon eine mit dem neuen Titel existiert. Bitte glei
 "thumbnail-more"	=> "vergrößern",
 "and"			=> "und",
 "rchide"		=> "in $4 form; $1 kleine Änderungen; $2 sekundäre Namensräume; $3 mehrfache Änderungen.",
-"showhideminor"		=> "kleine Änderungen $1 | $2 bots | $3 logged in users | $4 patrolled edits",
+'rcshowhideminor' => 'Kleine Änderungen $1',
+'rcshowhidebots' => '$1 bots',
+'rcshowhideliu' => 'Angemeldete Benutzer $1',
+'rcshowhideanons' => '$1 anonymous users',
+'rcshowhidepatr' => '$1 patrolled edits',
+'rcshowhidemine' => 'Eigene Beiträge $1',
 "rcliu"			=> "$1 Änderungen durch eingeloggte Benutzer",
 "uploaddisabled"	=> "Entschuldigung, das Hochladen ist deaktiviert.",
 "deadendpages"		=> "Sackgassenartikel",
