@@ -496,7 +496,12 @@ $2 Inclure les page de redirections &nbsp; Rechercher $3 $9',
 'rcnote'  => 'Voici les <strong>$1</strong> dernières modifications effectuées au cours des <strong>$2</strong> derniers jours.',
 'rcnotefrom'	=> 'Voici les modifications effectuées depuis le <strong>$2</strong> (<b>$1</b> au maximum).',
 'rclistfrom'	=> 'Afficher les nouvelles modifications depuis le $1.',
-'showhideminor' => '$1 modifications mineures | $2 robots | $3 utilisateurs enregistrés | $4 patrolled edits',
+'rcshowhideminor' => '$1 modifications mineures',
+'rcshowhidebots' => '$1 robots',
+'rcshowhideliu' => '$1 utilisateurs enregistrés',
+'rcshowhideanons' => '$1 anonymous users',
+'rcshowhidepatr' => '$1 patrolled edits',
+'rcshowhidemine' => '$1 mes contributions',
 'rclinks'	=> 'Afficher les $1 dernières modifications effectuées au cours des $2 derniers jours; $3 modifications mineures.',
 'rchide'  => 'in $4 form; $1 modifications mineures; $2 espaces secondaires; $3 modifications multiples.', // FIXME
 'rcliu'	=> '; $1 modifications par des contributeurs connectés',
